@@ -13,6 +13,7 @@
 	<script src="src/parchment/file.js"></script>
 	<script src="src/parchment/ui.js"></script>
 	<script src="src/parchment/library.js"></script>
+	<script src="src/parchment/zvm-gnusto.js"></script>
 	<script src="src/parchment/outro.js"></script>
 	<link rel="stylesheet" type="text/css" href="parchment.css">
 	<meta name="viewport" content="width=device-width,user-scalable=no">
